<resources>
    <string name="app_name">IndoorNav</string>
    <string name="init">Initialize Antenna</string>
    <string name="not_init">Not Initialized</string>
    <string name="get_rx_power">Get RX Power</string>
    <string name="received_power">Received Power</string>
    <string name="calibrate">Calibrate</string>
    <string name="average_distance">Average Distance</string>
    <string name="antenna_delay">Antenna Delay</string>
    <string name="stat">Distance Stats</string>
    <string name="test_orientation">Test Orientation</string>
    <string name="navigation">Navigation</string>
    <string name="test_dwm1000">Test DWM1000</string>
    <string name="calibration">Calibration</string>
    <string name="tracking">Tracking</string>
    <string name="is_running">Running?</string>
    <string name="stats">Stats</string>
    <string name="roll">Roll :</string>
    <string name="pitch">Pitch :</string>
    <string name="azimuth">Azimuth :</string>
    <string name="success_init">Device initialized successfully</string>
    <string name="fail_init">WARNING: device failed to initialize</string>
    <string name="device_id">Device ID: 0x%1$x</string>
    <string name="it">Iteration: %1$d</string>
    <string name="coor">Coordinates: %1$f, %2$f</string>
    <string name="coor_cm">Coordinates: %1$f, %2$f [cm]</string>
    <string name="Test_button">Button</string>
    <string name="test_usbconnection">Test USB Connection</string>
    <string name="TestUSBConnection">Test_button</string>
    <string name="button_test_usb">Test USB connection</string>
    <string name="button_options">Options</string>
    <string name="text_options">Options</string>
    <string name="beacons_position">Beacons positions</string>
    <string name="title_activity_beacons_positions">Positions</string>
    <string name="initp">Init</string>
    <string name="next">Next</string>
    <string name="skip">Skip</string>
    <string name="accept">Accept</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact based on your message
        history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value"/>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_settings">Settings</string>
</resources>
